@@ -7,6 +7,9 @@
       "HEALTH": "Status",
       "DATA": "Daten",
       "CHECKS": "Checks",
+      "CHECK": "Check",
+      "FAILED": "fehlgeschlagen",
+      "CLUSTER_OFFLINE": "Cluster ist nicht erreichbar",
       "HELP": "Hilfe",
       "CRATE_MANUAL": "Crate Handbuch",
       "DOC_MSG": "Lese die Online Dokumentation",
@@ -31,6 +34,10 @@
         "UNAVAIL_RECORDS": "Nicht verfüg. Datensätze",
         "CLUSTER_LOAD": "Cluster Last",
         "CLUSTER_CHECKS": "Cluster Checks",
+        "NODES_CHECKS": "Knoten Checks",
+        "DISMISS": "Bestätigen",
+        "DISMISS_ALL": "Alle bestätigen",
+        "AFFECTED_NODES": "Betroffene Knoten",
         "INFO": "INFO",
         "WARNING": "WARNUNG",
         "CRITICAL": "KRITISCH"
