@@ -7,6 +7,9 @@
       "HEALTH": "Health",
       "DATA": "Data",
       "CHECKS": "Checks",
+      "CHECK": "Check",
+      "FAILED": "failed",
+      "CLUSTER_OFFLINE": "Cluster is offline",
       "HELP": "Help",
       "CRATE_MANUAL": "Crate Manual",
       "DOC_MSG": "Read the online documentation",
@@ -31,6 +34,10 @@
         "UNAVAIL_RECORDS": "Unavail. Records",
         "CLUSTER_LOAD": "Cluster Load",
         "CLUSTER_CHECKS": "Cluster Checks",
+        "NODES_CHECKS": "Nodes Checks",
+        "DISMISS": "Dismiss",
+        "DISMISS_ALL": "Dismiss all",
+        "AFFECTED_NODES": "Affected nodes",
         "INFO": "INFO",
         "WARNING": "WARNING",
         "CRITICAL": "CRITICAL"
