@@ -72,7 +72,7 @@
     <script type="application/javascript" src="scripts/services/tableinfo.js"></script>
     <script type="application/javascript" src="scripts/services/shardinfo.js"></script>
     <script type="application/javascript" src="scripts/services/nodeinfo.js"></script>
-    <script type="application/javascript" src="scripts/services/clustercheck.js"></script>
+    <script type="application/javascript" src="scripts/services/checks.js"></script>
     <script type="application/javascript" src="scripts/services/udc.js"></script>
 
     <script type="application/javascript" src="scripts/controllers/common.js"></script>
