@@ -17,7 +17,7 @@
     'tableinfo',
     'shardinfo',
     'nodeinfo',
-    'clustercheck',
+    'checks',
     'udc',
     'nvd3ChartDirectives',
     'pascalprecht.translate'
